--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "dependencies": {
-    "chai": "^4.3.6"
+    "chai": "^4.3.6",
+    "chai-arrays": "^2.2.0"
   },
   "devDependencies": {
     "mocha": "^9.2.1"
